Fix container not appearing when opened on small screen

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  min-width: 520px;
 }
 
 h1 {
@@ -29,6 +30,7 @@ h1 {
   padding: 10px;
   flex-grow: 0;
   max-width: 68px;
+  max-height: 100%;
 }
 
 .colors button,
@@ -73,10 +75,12 @@ h1 {
 #container {
   display: flex;
   flex-wrap: wrap;
-  flex: auto;
-  max-height: 500px;
-  max-width: 500px;
+  flex: 0 1 auto;
+  min-height: 80vh;
+  min-width: 80vh;
+  aspect-ratio: 1/1;
   border: 2px solid black;
+  overflow: auto;
 }
 
 div {
